<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvEnterValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/edtValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEnterValueLabel"
        android:layout_marginTop="8dp"
        android:hint="@string/demo_value"
        android:inputType="number"
        android:maxLength="6"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/tvEnterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/edtValue"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edtNameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEnterName"
        android:layout_marginTop="8dp"
        android:hint="@string/demo_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:singleLine="true"
        android:maxLength="30"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/tvPickTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtNameValue"
        android:layout_marginTop="20dp"
        android:text="@string/pick_time"
        android:textSize="14sp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:background="@drawable/pick_time_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recTimeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPickTime"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:listitem="@layout/alarm_item_view"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginHorizontal="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recTimeList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/submit"/>




</androidx.constraintlayout.widget.ConstraintLayout>